--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,7 @@ project(musicookie_new)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(musicookie_new musicookie.cpp
-        CoreObject/Mixer.cpp
-        CoreObject/Mixer.hpp)
+        CoreObject/Mixer/Mixer.cpp
+        CoreObject/Mixer/Mixer.hpp
+        IOSystem/Log/Log.cpp
+        IOSystem/Log/Log.hpp)
